# Lab3-CargaDeModelos

./: .gitignore  README.md
Lab3/: .gitignore  CMakeLists.txt  Color.h  Point.h  Vertices.h  main.cpp
